2014-01-23  Corey Minyard <minyard@acm.org>

	* utils.h, readconfig.c, dataxfer.c: Rework the find_xxx
	functions to return a strdup of the string.

	* dataxfer.c, dataxfer.h, devcfg.h: Remove the dinfo structure
	and move the contents into the port structure, and remove the
	now empty devcfg.h.

	* configure.ac: Minor rework.

2014-01-22  Corey Minyard <minyard@acm.org>

	* io.h, devcfg.h, devcfg.c, dataxfer.c, buffer.c, buffer.h: Abstract
	the device I/O operations.

	* utils.c, utils.h, controller.h, controller.c: Fix some const
	correctness issues

	* conroller.c, controller.h: Add printf-style output.

	* dataxfer.h, dataxfer.c, devcfg.h, devcfg.c, io.h, readconfig:
	Rework the error and output handling to make it more flexible, so
	errors can be output with useful information from the lower
	levels.

2013-08-08  Corey Minyard <minyard@acm.org>

	* utils.c, utils.h, dataxfer.c, controller.c: Rework the handling
	of addresses to work properly with all the return values of
	getaddrinfo, and to prefer IPV6 over IPV4 when opening the socket.
	This means if you specify a number, it will open the IPV6 ::,port
	address first.  This was a big cleanup, and moved a lot of the
	base socket handling into utils.h.

	* dataxfer.c: Rework the stdio handling so it doesn't rely on the
	port number in the address, since that is now gone.

	* dataxfer.c: Set port->closestr to NULL when freeing it to avoid
	a double-free.

	* readconfig.c, ser2net.8: Rework the input handling so an IPV6
	can be specified as part of the portnum parameter.  This was hard
	because IPV6 addresses have ':' in them.  Basically, if there is a
	"," in the port specification, assume that everything from the
	beginning of the line to the ':' after the ',' is the port number.

	* utils.c, utils.h, dataxfer.c, controller.c: Modified address
	handling so that ser2net opens all the addresses returned by
	getaddrinfo, not just the first one.  That should make things
	work correctly in a lot more cases.
