@@ -1,0 +1,34 @@
+/*
+ *  ser2net - A program for allowing telnet connection to serial ports
+ *  Copyright (C) 2001  Corey Minyard <minyard@acm.org>
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ */
+
+#ifndef SER2NET_H
+#define SER2NET_H
+
+#include "selector.h"
+
+/* Set to true if we are supposed to do CISCO IOS baud rates instead
+   of RFC2217 ones. */
+extern int cisco_ios_baud_rates;
+
+/* The default rfc2217 signature if none is provided. */
+extern char *rfc2217_signature;
+
+extern selector_t *ser2net_sel;
+
+#endif /* SER2NET_H */
